1.2.0 release & 1.2.1 work