@@ -1,8 +1,13 @@
-# Imaginary VR v1.2.0
+# Imaginary VR v1.2.1
+
+## Install Instructions
+
+1. Please use 5+ GB of RAM(may be more, this is untested on my part. I will do even more testing to find the lowest possible in the next update.)
+2. You will need to use a custom java argument, failure to do so may result in performance loss: ```-XX:+UseZGC```
 
 ## Additions
 
-- Added mod "Ears" for more skin customization.
+- Added Cottage Craft Festive Eggs
 
 ## Changes
 
@@ -10,60 +15,22 @@
 
 ## Updates
 
-- Updated "Wavey Capes to v1.5.1 from v1.4.10
-- Updated "3D Skin Layers" to v1.7.4 from v1.6.7
-- Updated "Zoomify" to v2.14.2 from v2.14.0
-- Updated "Vivecraft" to v1.2.5 from v1.1.11 BETA 5
-- Updated "Vanilla Refresh" to v1.4.26 from v1.4.25
-- Updated "Tool Trims" to v2.2.2b from v2.2.1
-- Updated "Terralith" to v2.5.8 from 2.5.5
-- Updated "Sounds" to v2.3.2 from v2.1.0
-- Updated "Sound Physics Remastered" to v1.4.8 from v1.4.6
-- Updated "Sodium" to 0.6.9 from v0.6.0 BETA 2
-- Updated "Simple Voice Chat" to v2.5.26 from v2.5.24
-- Updated "Shulker Box Tooltip" to v5.1.2 from v5.1.1
-- Updated "Seamless" to v2.3.2 from v2.3.0
-- Updated "Reactive Music" to v1.0.3 from v0.4.0
-  - An "Imaginary" custom songpack will be coming in future updates, however at the moment the mod default one will be used.
-- Updated "Presence Footsteps" to v1.10.3 from v1.10.0
-- Updated "Polymorph" to v1.0.7 from v1.0.6
-- Updated "Now Playing" to v1.5.13 from v1.5.9
-  - This mod may be removed in a future update, please don't hesitate to give feedback in the discord!
-- Updated "Not Enough Animations" to v1.9.2 from v1.7.6
-  - This mod may be removed in a future update, please don't hesitate to give feedback in the discord!
-- Updated "No Chat Reports" to v2.9.1 from v2.8.0
-- Updated "MVS - Moog's Voyager Structures" to v4.2.8 from v4.2.5
-- Updated "More Lectern Variants" to v1.8.2 from v1.7.1
-- Updated "More Ladders" to v1.8 from v1.7
-- Updated "More Grindstone Variants" to v1.1.2 from v1.0.4
-- Updated "More Fletching Tables" to v1.8.2 from v1.6.1
-- Updated "More Composter Variants" to v1.8.1 from v1.7.0
-- Updated "More Chiseled Bookshelf Variants" to v1.7.1 from v1.6.1
-- Updated "More Cartography Tables" to v1.8.1 from v1.6.0
-- Updated "More Barrel Variants" to v1.7.4 from v1.7.0
-- Updated "More Armor Trims" to v1.4.1 from v1.4.0
-- Updated "Mob Heads" to v3.2.0 from v2.7.5
-- Updated "Injured Effects" to v1.4.8 from v1.4.3b
-- Updated "Horde Nights to v1.2.2.1 from v1.1.0
-- Updated "Hopo Better Mineshafts" to v1.3.0 from v1.2.7
-- Updated "Falling Leaves" to v1.16.4 from v1.16.2
-- Updated "Elytra Trims" to v3.5.6 from v3.5.4
-- Updated "Deeper And Darker" to v1.3.3 from v1.3.2.1
-- Updated "Creeper Overhaul" to v4.0.6 from v4.0.5
+- Updated to Minecraft Version 1.21.1
+- Updated Fabric API from v0.102.0 for 1.21 to v0.115.2 for 1.21.1
+- Updated Charcoal Block from 1.21-0.3 to 1.21.1-0.2
+- Updated Diagonal Walls from v21.0.0 for 1.21 to v21.1.2 for 1.21.1
+- Updated Puzzles Lib from v21.0.28 for 1.21 to v21.1.33 for 1.21.1
+- Updated Forge Config API Port from v21.0.8 for 1.21 to v21.1.3 for 1.21.1
+- Updated Lithium from v0.13.1 for 1.21 to v0.15.0 for 1.21.1
+- Updated More Nuggets from v1.21-0.1 to v1.21.1-0.2
+- Updated Visual Workbench from v21.0.5 for 1.21 to v21.1.0 for 1.21.1
 
 ## Removals
-Some mod removals will be due to these mods being for content creators, and will be removed from the modpack by default to help reduce load.
 
-- Removed "Just Enough Items" due to massive amount of lag loading a world
-- Removed "First Person Model" due to incompatability with VR
-- Removed "Replay Mod" & "Replay Voice Chat" to reduce modpack load.
-- TEMPORARY removal of "The Immersive Music Mod" as it was incompatible with Reactive Music.
-  - This mod will remain disabled, however the music files will be integrated into a custom songpack for the Imaginary Modpack for compatability.
-- Removed "OBS Overlay" to reduce modpack load
-- Removed "Not Enough Recipe Book" due to the removal of "Just Enough Items". I am looking for a better solution though.
+- TEMPORARILY Removed Split Shulker Boxes due to lack of a supported 1.21.1 version
 
 ## Fixes
 
-- Fixed two music tracks playing at once when in a world(incompatability between The Immersive Music Mod & Reactive Music)
+- 
 
 ## Known Issues
